(raf) Core: Removed VBLANK message across the core and sent to UI. UIs need to do it themselves.
(raf) TextUI3d: Updated to use a renderthread instead of vblank message -- Good speed-up.
(raf) Core/Plugins: UI Plugins have versioning now, and won't work across versions of PSPRadio that don't support the same interface.
(raf) Core: Clean-up.
BUG FIXES
(raf) TextUI: When switching skins all the text will disappear. Corrected.
(raf) Choosing exit from option menu is much faster, and less prone to crashing.
KNOWN BUGS
(raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.  (Also, make sure CPU speed is 222 when establishing a WiFi connection).
(raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).

1.17.1349 (2007-03-20)
NEW FEATURES
(raf) Plugins: Added some VERY SIMPLE visualization plugins. This only works under TextUI at the moment. (Look under the Options-Plugins menu)
(raf) Plugins: PSPRadio saves current selected plugin in config file section PLUGINS:DEFAULT_VISUALIZER
(raf) Core: Localfiles: Empty directories are not listed anymore.
(albadross) TextUI: Updated screens for the visualizer plugins. Added new skins: Selector2 and Spectrum.
(raf) TextUI: Converted rendering to use page flipping (double buffering).
(raf) TextUI: Added a PLUGINS:DISPLAY_FPS option to config files. (not there by default -- disabled).
(raf) Plugins: Added sample sourcecode for a simple visualizer plugin to the release.
BUG FIXES
(raf) Core: Fixed button repeat handling that broke when implemented the button mapping. (This also corrected problems with HPRM)
(raf) Core: If resuming(from suspend) from a paused state, it would not continue from where it left off.